--- a/package.json
+++ b/package.json
@@ -2,21 +2,57 @@
   "name": "electron-rsbuild",
   "version": "0.0.1",
   "description": "Next generation Electron build tooling based on Rsbuild.",
-  "main": "index.js",
+  "author": "veaba<godpu@oulook.com>",
+  "type": "module",
+  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "bin": {
+    "electron-rsbuild": "bin/electron-rsbuild.js"
+  },
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rslib build",
+    "dev": "rslib build --watch",
+    "test-start": "electron-rsbuild preview",
+    "test-dev": "electron-rsbuild dev",
+    "test-prebuild": "electron-rsbuild build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/veaba/electron-rsbuild.git"
   },
   "keywords": [
-    "electron-builder"
+    "electron-builder",
+    "electron-rsbuild"
   ],
-  "author": "veaba",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/veaba/electron-rsbuild/issues"
   },
-  "homepage": "https://github.com/veaba/electron-rsbuild#readme"
+  "homepage": "https://github.com/veaba/electron-rsbuild#readme",
+  "devDependencies": {
+    "@rslib/core": "^0.0.16",
+    "@types/node": "^22.9.0",
+    "cac": "^6.7.14",
+    "picocolors": "^1.1.1",
+    "typescript": "^5.6.3"
+  },
+  "workspace": [
+    "*"
+  ],
+  "dependencies": {
+    "@rsbuild/core": "^1.1.0",
+    "@rsbuild/plugin-node-polyfill": "^1.2.0",
+    "magic-string": "^0.30.12",
+    "rslog": "^1.2.3"
+  }
 }
