--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "bin": {
-    "electron-rsbuild": "bin/electron-rsbuild.js"
+    "electron-rsbuild": "bin/electron-rsbuild.ts"
   },
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -52,6 +52,7 @@
   "dependencies": {
     "@rsbuild/core": "^1.1.0",
     "@rsbuild/plugin-node-polyfill": "^1.2.0",
+    "jiti": "^2.4.0",
     "magic-string": "^0.30.12",
     "rslog": "^1.2.3"
   }
