--- a/tests/electron-rsbuild-demo/electron-builder.yml
+++ b/tests/electron-rsbuild-demo/electron-builder.yml
@@ -1,18 +1,18 @@
 appId: com.electron.app
-productName: electron-vite-preview1
+productName: electron-rsbuild-preview1
 directories:
   buildResources: build
 files:
   - '!**/.vscode/*'
   - '!src/*'
-  - '!electron.vite.config.{js,ts,mjs,cjs}'
+  - '!electron.rsbuild.config.{js,ts,mjs,cjs}'
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
   - resources/**
 win:
-  executableName: electron-vite-preview1
+  executableName: electron-rsbuild-preview1
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
