--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,5 +11,5 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["src", "rslib.config.ts"]
+  "include": ["packages/core/src", "rslib.config.ts"]
 }
