--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -52,6 +52,9 @@
     "@rsbuild/core": "^1.1.0",
     "jiti": "^2.4.0",
     "magic-string": "^0.30.12",
-    "rslog": "^1.2.3"
+    "rslog": "^1.2.3",
+    "@electron-rsbuild/plugin-main": "workspace:*",
+    "@electron-rsbuild/plugin-preload": "workspace:*",
+    "@electron-rsbuild/plugin-renderer": "workspace:*"
   }
 }
