--- a/examples/electron-rsbuild-react/package.json
+++ b/examples/electron-rsbuild-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-rsbuild-app",
+  "name": "electron-rsbuild-react",
   "version": "1.0.0",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
