--- a/packages/plugin-renderer/package.json
+++ b/packages/plugin-renderer/package.json
@@ -2,13 +2,25 @@
   "name": "@electron-rsbuild/plugin-renderer",
   "version": "0.0.0",
   "description": "Electron main config plugin for Electron-Rsbuild",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "rslib build --watch",
+    "build": "rslib build"
   },
   "author": "veaba<godpu@oulook.com>",
   "dependencies": {
+    "@electron-rsbuild/core": "workspace:*",
     "@rsbuild/core": "^1.1.0",
-    "@electron-rsbuild/core": "workspace:*"
+    "@rslib/core": "^0.0.16"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0",
+    "typescript": "^5.6.3"
   }
 }
