--- a/packages/plugin-renderer/tsconfig.json
+++ b/packages/plugin-renderer/tsconfig.json
@@ -9,8 +9,7 @@
     "resolveJsonModule": true,
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true,
-    "target": "ES2018"
+    "allowImportingTsExtensions": true
   },
-  "include": ["src", "rslib.config.ts"]
+  "include": ["src"]
 }
