--- a/examples/electron-rsbuild-react/package.json
+++ b/examples/electron-rsbuild-react/package.json
@@ -19,7 +19,8 @@
     "builder": "electron-builder --dir",
     "test": "vitest dev",
     "start": "electron-rsbuild preview",
-    "dev": "electron-rsbuild dev",
+    "dev": "bun --inspect electron-rsbuild dev",
+    "dev1": "electron-rsbuild dev",
     "inspect": "bun --inspect ./node_modules/electron-rsbuild/bin/electron-rsbuild.ts dev",
     "build": "npm run typecheck && electron-rsbuild build",
     "postinstall": "electron-builder install-app-deps",
@@ -38,6 +39,9 @@
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron-rsbuild/core": "workspace:*",
+    "@electron-rsbuild/plugin-main": "workspace:*",
+    "@electron-rsbuild/plugin-preload": "workspace:*",
+    "@electron-rsbuild/plugin-renderer": "workspace:*",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
