--- a/examples/electron-rsbuild-react/tsconfig.node.json
+++ b/examples/electron-rsbuild-react/tsconfig.node.json
@@ -1,8 +1,13 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.rsbuild.config.*", "src/main/**/*", "src/preload/**/*", "electron.rsbuild.config.ts"],
+  "include": [
+    "electron.rsbuild.config.*",
+    "src/main/**/*",
+    "src/preload/**/*",
+    "electron.rsbuild.config.ts",
+    "rsbuild-main.config.ts"
+  ],
   "compilerOptions": {
-    "composite": true,
-    "types": ["electron-rsbuild/node"]
+    "composite": true
   }
 }
