--- a/examples/electron-rsbuild-react/package.json
+++ b/examples/electron-rsbuild-react/package.json
@@ -19,9 +19,9 @@
     "builder": "electron-builder --dir",
     "test": "vitest dev",
     "start": "electron-rsbuild preview",
-    "dev": "bun --inspect electron-rsbuild dev",
-    "dev1": "electron-rsbuild dev",
-    "inspect": "bun --inspect ./node_modules/electron-rsbuild/bin/electron-rsbuild.ts dev",
+    "dev": "electron-rsbuild dev",
+    "dev-nx": "electron-rsbuild dev",
+    "inspect": "bun --inspect ./node_modules/electron-rsbuild/bin/electron-rsbuild.mjs dev",
     "build": "npm run typecheck && electron-rsbuild build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
