--- a/packages/plugin-preload/package.json
+++ b/packages/plugin-preload/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "dev": "rslib build --watch",
+    "start": "rslib build --watch",
     "build": "rslib build"
   },
   "dependencies": {
