--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,8 +21,9 @@
   ],
   "scripts": {
     "install-dep": "pnpm install",
-    "build": "rslib build",
     "dev": "rslib build --watch",
+    "build": "rslib build",
+    "clear": "rimraf dist",
     "test-start": "electron-rsbuild preview",
     "test-dev": "electron-rsbuild dev",
     "test-prebuild": "electron-rsbuild build"
