--- a/packages/plugin-preload/package.json
+++ b/packages/plugin-preload/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
-    "build": "rslib build"
+    "build": "rslib build",
+    "clear": "rimraf dist"
   },
   "dependencies": {
     "@electron-rsbuild/core": "workspace:*",
