--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,23 +5,25 @@
   "author": "veaba<godpu@oulook.com>",
   "type": "module",
   "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "bin": {
     "electron-rsbuild": "bin/electron-rsbuild.mjs"
   },
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "install-dep": "pnpm install",
     "dev": "rslib build --watch",
+    "start": "rslib build --watch",
     "build": "rslib build",
     "clear": "rimraf dist",
     "test-start": "electron-rsbuild preview",
