--- a/examples/electron-rsbuild-react/package.json
+++ b/examples/electron-rsbuild-react/package.json
@@ -14,7 +14,7 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "rsbuild:build": "rsbuild build",
     "rsbuild:dev": "rsbuild dev",
-    "rsbuild:build-main": "rsbuild build -c rsbuild-main.config.ts",
+    "rsbuild:build-main": "rsbuild build -c electron.rsbuild.config.ts",
     "rsbuild:build-preload": "rsbuild build rsbuild-preload.config.ts",
     "builder": "electron-builder --dir",
     "test": "vitest dev",
