--- a/examples/electron-rsbuild-react/package.json
+++ b/examples/electron-rsbuild-react/package.json
@@ -20,9 +20,9 @@
     "test": "vitest dev",
     "start": "electron-rsbuild preview",
     "dev": "electron-rsbuild dev",
-    "dev-nx": "electron-rsbuild dev",
+    "preview": "electron-rsbuild preview",
+    "build": "electron-rsbuild build",
     "inspect": "bun --inspect ./node_modules/electron-rsbuild/bin/electron-rsbuild.mjs dev",
-    "build": "npm run typecheck && electron-rsbuild build",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
