--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "react": "pnpm --filter=electron-rsbuild-react run dev",
     "preview": "pnpm --filter=electron-rsbuild-react run preview",
     "electron": "pnpm --filter=electron-rsbuild-react run build",
+    "prepare": "pnpm run build",
     "dev": "nx dev @electron-rsbuild/core",
-    "build": "nx build @electron-rsbuild/core",
+    "build": "nx run-many -t build ",
     "clear": "nx run-many -t clear",
     "dev:packages": "pnpm run dev:plugins && pnpm run dev:core",
     "dev:core": "pnpm --filter=@electron-rsbuild/core run dev",
