--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -9,7 +9,5 @@
     "onlyUpdatePeerDependentsWhenOutOfRange": true
   },
   "updateInternalDependencies": "patch",
-  "ignore": [
-    "create-electron-rsbuild"
-  ]
+  "ignore": ["create-electron-rsbuild"]
 }
