--- a/packages/plugin-main/package.json
+++ b/packages/plugin-main/package.json
@@ -31,5 +31,10 @@
   "devDependencies": {
     "@types/node": "^22.9.0",
     "typescript": "^5.6.3"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true,
+    "registry": "https://registry.npmjs.org/"
   }
 }
