--- a/packages/create-electron-rsbuild/template-react-ts/package.json
+++ b/packages/create-electron-rsbuild/template-react-ts/package.json
@@ -1,21 +1,53 @@
 {
-  "name": "rsbuild-react-ts",
+  "name": "electron-rsbuild-react",
+  "version": "0.0.6",
+  "description": "An Electron application with React and TypeScript",
+  "main": "./out/main/index.js",
   "private": true,
-  "version": "1.0.0",
+  "type": "commonjs",
+  "author": "veaba<godpu@oulook.com>",
+  "homepage": "https://electron-rsbuild.org",
   "scripts": {
-    "dev": "rsbuild dev --open",
-    "build": "rsbuild build",
-    "preview": "rsbuild preview"
+    "format": "prettier --write .",
+    "rsbuild:build": "rsbuild build",
+    "rsbuild:dev": "rsbuild dev",
+    "rsbuild:build-main": "rsbuild build -c electron.rsbuild.config.ts",
+    "rsbuild:build-preload": "rsbuild build rsbuild-preload.config.ts",
+    "builder": "electron-builder --dir",
+    "test": "vitest dev",
+    "start": "electron-rsbuild preview",
+    "dev": "electron-rsbuild dev",
+    "preview": "electron-rsbuild preview",
+    "build": "electron-rsbuild build",
+    "inspect": "bun --inspect ./node_modules/electron-rsbuild/bin/electron-rsbuild.mjs dev",
+    "build:unpack": "npm run build && electron-builder --dir",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "electron-rsbuild build && electron-builder --mac",
+    "build:linux": "electron-rsbuild build && electron-builder --linux"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@electron-toolkit/preload": "^3.0.1",
+    "@electron-toolkit/utils": "^3.0.0",
+    "@rsbuild/core": "^1.1.0",
+    "@rsbuild/plugin-node-polyfill": "^1.2.0",
+    "@rsbuild/plugin-react": "^1.0.7"
   },
   "devDependencies": {
-    "@rsbuild/core": "^1.1.0",
-    "@rsbuild/plugin-react": "^1.0.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3"
+    "@electron-rsbuild/core": "workspace:*",
+    "@electron-rsbuild/plugin-main": "workspace:*",
+    "@electron-rsbuild/plugin-preload": "workspace:*",
+    "@electron-rsbuild/plugin-renderer": "workspace:*",
+    "@electron-toolkit/tsconfig": "^1.0.1",
+    "@types/node": "^20.14.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "electron": "^31.0.2",
+    "electron-builder": "^24.13.3",
+    "prettier": "^3.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.5.2",
+    "vitest": "^2.1.4"
   }
 }
