--- a/packages/create-electron-rsbuild/tsconfig.json
+++ b/packages/create-electron-rsbuild/tsconfig.json
@@ -1,6 +1,22 @@
 {
-  "extends": "@rsbuild/config/tsconfig-node16",
   "compilerOptions": {
+    "lib": ["DOM", "ESNext"],
+    "jsx": "preserve",
+    "target": "ES2021",
+    "skipLibCheck": true,
+    "useDefineForClassFields": true,
+
+    /* modules */
+    "module": "ES2020",
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "moduleResolution": "Bundler",
+    "resolveJsonModule": true,
+
+    /* type checking */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "./dist",
     "baseUrl": "./"
   },
