--- a/packages/create-electron-rsbuild/package.json
+++ b/packages/create-electron-rsbuild/package.json
@@ -1,12 +1,12 @@
 {
   "name": "create-electron-rsbuild",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Create a new Rsbuild project",
   "homepage": "https://electron-rsbuild.org",
   "repository": {
     "type": "git",
     "url": "https://github.com/veaba/electron-rsbuild",
-    "directory": "packages/create-rsbuild"
+    "directory": "packages/create-electron-rsbuild"
   },
   "license": "MIT",
   "type": "module",
