--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nx dev @electron-rsbuild/core",
     "build:core": "pnpm --filter=@electron-rsbuild/core run build",
     "build:plugins": "pnpm --filter=@electron-rsbuild/plugin-* run build",
+    "build:create": "pnpm --filter=create-electron-rsbuild run build",
     "clear": "nx run-many -t clear",
     "dev:packages": "pnpm run dev:plugins && pnpm run dev:core",
     "dev:core": "pnpm --filter=@electron-rsbuild/core run dev",
