--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Build @electron-rsbuild/core
         run: pnpm build:core
 
+      - name: Build create-electron-rsbuild
+        run: pnpm build:create
+
       - name: Release
         uses: web-infra-dev/actions@v2
         with:
