chore(tsconfig): add missing node types in packages

--- a/packages/create-electron-rsbuild/tsconfig.json
+++ b/packages/create-electron-rsbuild/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES2021",
     "skipLibCheck": true,
     "useDefineForClassFields": true,
+    "types": ["node"],
 
     /* modules */
     "module": "ES2020",
