--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -10,7 +10,8 @@
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true,
-    "target": "ES2018"
+    "target": "ES2018",
+    "types": ["node"]
   },
-  "include": ["src"]
+  "include": ["src", "bin"]
 }
