--- a/packages/create-electron-rsbuild/package.json
+++ b/packages/create-electron-rsbuild/package.json
@@ -17,11 +17,7 @@
   "bin": {
     "create-electron-rsbuild": "./bin.js"
   },
-  "files": [
-    "template-*",
-    "dist",
-    "bin.js"
-  ],
+  "files": ["template-*", "dist", "bin.js"],
   "scripts": {
     "build": "rslib build",
     "dev": "rslib build --watch",
