--- a/biome.json
+++ b/biome.json
@@ -2,14 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
   "organizeImports": {
     "enabled": true,
-    "include": [
-      "./**/*.js",
-      "./**/*.jsx",
-      "./**/*.ts",
-      "./**/*.tsx",
-      "./**/*.mjs",
-      "./**/*.cjs"
-    ]
+    "include": ["./**/*.js", "./**/*.jsx", "./**/*.ts", "./**/*.tsx", "./**/*.mjs", "./**/*.cjs"]
   },
   "vcs": {
     "enabled": true,
@@ -18,13 +11,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignore": [
-      "*.vue",
-      "*.svelte",
-      "template-lit-*/src/my-element.*",
-      "tsconfig.json",
-      "tsconfig.*.json"
-    ],
+    "ignore": ["*.vue", "*.svelte", "template-lit-*/src/my-element.*", "tsconfig.json", "tsconfig.*.json"],
     "ignoreUnknown": true
   },
   "formatter": {
