--- a/nx.json
+++ b/nx.json
@@ -1,26 +1,14 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "namedInputs": {
-    "default": [
-      "{projectRoot}/src/**/*"
-    ],
-    "dev": [
-      "default",
-      "!{projectRoot}/**/*.{md,mdx}",
-      "{projectRoot}/tsconfig.json",
-      "{projectRoot}/package.json",
-      "{projectRoot}/rslib.config.*"
-    ]
+    "default": ["{projectRoot}/src/**/*"],
+    "dev": ["default", "!{projectRoot}/**/*.{md,mdx}", "{projectRoot}/tsconfig.json", "{projectRoot}/package.json", "{projectRoot}/rslib.config.*"]
   },
   "targetDefaults": {
     "dev": {
       "cache": false,
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "{projectRoot}/dist"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["{projectRoot}/dist"]
     }
   },
   "defaultBase": "main"
