--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,9 +17,7 @@
   "bin": {
     "electron-rsbuild": "bin/electron-rsbuild.mjs"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
@@ -30,10 +28,7 @@
     "type": "git",
     "url": "git+https://github.com/electron-rsbuild/electron-rsbuild.git"
   },
-  "keywords": [
-    "electron-builder",
-    "electron-rsbuild"
-  ],
+  "keywords": ["electron-builder", "electron-rsbuild"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/electron-rsbuild/electron-rsbuild/issues"
