--- a/packages/plugin-main/package.json
+++ b/packages/plugin-main/package.json
@@ -14,9 +14,7 @@
       "require": "./dist/index.cjs"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
