--- a/examples/electron-rsbuild-react/package.json
+++ b/examples/electron-rsbuild-react/package.json
@@ -23,7 +23,8 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-rsbuild build && electron-builder --mac",
-    "build:linux": "electron-rsbuild build && electron-builder --linux"
+    "build:linux": "electron-rsbuild build && electron-builder --linux",
+    "cleanup": "rimraf node_modules"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
@@ -42,7 +43,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "electron": "^31.0.2",
+    "electron": "38.2.1",
     "electron-builder": "^24.13.3",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
