--- a/biome.json
+++ b/biome.json
@@ -2,14 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
   "organizeImports": {
     "enabled": true,
-    "include": [
-      "./**/*.js",
-      "./**/*.jsx",
-      "./**/*.ts",
-      "./**/*.tsx",
-      "./**/*.mjs",
-      "./**/*.cjs"
-    ]
+    "include": ["./**/*.js", "./**/*.jsx", "./**/*.ts", "./**/*.tsx", "./**/*.mjs", "./**/*.cjs"]
   },
   "vcs": {
     "enabled": true,
@@ -18,17 +11,25 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignore": [
-      "*.vue",
-      "*.svelte",
-      "template-lit-*/src/my-element.*",
-      "tsconfig.json",
-      "tsconfig.*.json"
-    ],
+    "ignore": ["*.vue", "*.svelte", "template-lit-*/src/my-element.*", "tsconfig.json", "tsconfig.*.json"],
     "ignoreUnknown": true
   },
   "formatter": {
-    "enabled": false
+    "enabled": true,
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineWidth": 200,
+    "lineEnding": "lf"
+  },
+  "javascript": {
+    "formatter": {
+      "arrowParentheses": "always",
+      "bracketSpacing": false,
+      "jsxQuoteStyle": "double",
+      "quoteStyle": "single",
+      "semicolons": "asNeeded",
+      "trailingCommas": "es5"
+    }
   },
   "css": {
     "parser": {
@@ -54,6 +55,10 @@
       },
       "performance": {
         "noDelete": "off"
+      },
+      "correctness": {
+        "noUnusedVariables": "error",
+        "noUnusedImports": "error"
       }
     }
   }
