--- a/packages/plugin-main/package.json
+++ b/packages/plugin-main/package.json
@@ -14,14 +14,13 @@
       "require": "./dist/index.cjs"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
     "build": "rslib build",
-    "clear": "rimraf dist"
+    "clear": "rimraf dist",
+    "cleanup": "rimraf node_modules"
   },
   "dependencies": {
     "@electron-rsbuild/core": "workspace:*",
