--- a/packages/plugin-preload/package.json
+++ b/packages/plugin-preload/package.json
@@ -7,14 +7,13 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
     "build": "rslib build",
-    "clear": "rimraf dist"
+    "clear": "rimraf dist",
+    "cleanup": "rimraf node_modules"
   },
   "dependencies": {
     "@electron-rsbuild/core": "workspace:*",
