--- a/packages/plugin-renderer/package.json
+++ b/packages/plugin-renderer/package.json
@@ -6,14 +6,13 @@
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
     "build": "rslib build",
-    "clear": "rimraf dist"
+    "clear": "rimraf dist",
+    "cleanup": "rimraf node_modules"
   },
   "author": "veaba",
   "dependencies": {
