--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@electron-rsbuild/core",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Next generation Electron build tooling based on Rsbuild.",
   "author": "veaba",
   "type": "module",
@@ -17,7 +17,9 @@
   "bin": {
     "electron-rsbuild": "bin/electron-rsbuild.mjs"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
@@ -29,7 +31,10 @@
     "type": "git",
     "url": "git+https://github.com/electron-rsbuild/electron-rsbuild.git"
   },
-  "keywords": ["electron-builder", "electron-rsbuild"],
+  "keywords": [
+    "electron-builder",
+    "electron-rsbuild"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/electron-rsbuild/electron-rsbuild/issues"
