--- a/packages/plugin-main/package.json
+++ b/packages/plugin-main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@electron-rsbuild/plugin-main",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Electron main config plugin for Electron-Rsbuild",
   "author": "veaba",
   "type": "module",
@@ -14,7 +14,9 @@
       "require": "./dist/index.cjs"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
