--- a/packages/plugin-renderer/package.json
+++ b/packages/plugin-renderer/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@electron-rsbuild/plugin-renderer",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "Electron main config plugin for Electron-Rsbuild",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "rslib build --watch",
     "start": "rslib build --watch",
